--- a/style.css
+++ b/style.css
@@ -78,11 +78,11 @@ h1{
 
 /*classe de esconder*/
 
-/* .hide
+ .hide
 {
     display: none !important;
 }
-*/
+
 
 
 /*placar*/
@@ -130,5 +130,5 @@ h1{
     background-color: #000;
     color: white;
     padding: 20px;
-    display: none;
+ 
 }
