--- a/style.css
+++ b/style.css
@@ -132,3 +132,27 @@ h1{
     padding: 20px;
  
 }
+/*Estilo para dispositivos menores*/
+
+@media only screen and (max-width: 992px) 
+{
+
+    #message p 
+    {
+        position: absolute;
+        margin-left: auto;
+        margin-right: auto;
+        left: 0;
+        right: 0;
+        top: 150px;
+        width: 50vw;
+        font-size: 50px;
+        background-color: #000;
+        color: white;
+        padding: 20px;
+        font-size: 1em;
+    }
+
+    
+    
+}
