--- a/style.css
+++ b/style.css
@@ -134,7 +134,7 @@ h1{
 }
 /*Estilo para dispositivos menores*/
 
-@media only screen and (max-width: 992px) 
+@media screen and (max-width: 992px) 
 {
 
     #message p 
