--- a/style.css
+++ b/style.css
@@ -125,8 +125,8 @@ h1{
     left: 0;
     right: 0;
     top: 150px;
-    width: 500px;
-    font-size: 50px;
+    width: 30vw;
+    font-size: 1.5em;
     background-color: #000;
     color: white;
     padding: 20px;
