--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+*{
+    margin: 0;
+    padding: 0;
+}
+
+
 body
 {
     text-align: center;
@@ -132,6 +138,37 @@ h1{
     padding: 20px;
  
 }
+
+footer
+{
+    bottom: 0;
+    position: fixed;
+    background-color:#3C3833;
+    width: 100%;
+    margin: auto;
+    height: 10vh;
+}
+
+footer p 
+{
+    color: #fff;
+    text-align:  center;
+    position: absolute;
+    top: 45%;
+    left: 14%;
+    translate: (-50%,-50%);
+    margin: 0;
+}
+marquee
+{
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    color: #000;
+    font-size: 1.5em;
+}
+
+
+
+
 /*Estilo para dispositivos menores*/
 
 @media screen and (max-width: 768px) 
