--- a/style.css
+++ b/style.css
@@ -189,7 +189,26 @@ marquee
         padding: 20px;
         
     }
-
+    footer
+    {
+        bottom: 0;
+        position: fixed;
+        background-color:#3C3833;
+        width: 100%;
+        margin: auto;
+        height: 10vh;
+    }
+    
+    footer p 
+    {
+        color: #fff;
+        text-align:  center;
+        position: absolute;
+        top: 45%;
+        left: 14%;
+        translate: (-50%,-50%);
+        margin: 0;
+    }
     
     
 }
