--- a/style.css
+++ b/style.css
@@ -13,6 +13,14 @@ body
 h1{
     font-size: 42px;
 }
+/*Definição de titulo*/
+
+h1#titulo{
+    padding: 10px;
+    padding-bottom: 100px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    
+}
 
 /*botões*/
 
