--- a/style.css
+++ b/style.css
@@ -155,6 +155,14 @@ h1#titulo{
 
 @media screen and (max-width: 768px) 
 {
+    /*Definição de titulo*/
+
+    h1#titulo{
+    padding: 10px;
+    padding-bottom: 100px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    
+    }   
 
     #message p 
     {
