--- a/style.css
+++ b/style.css
@@ -159,19 +159,15 @@ h1#titulo{
 
     h1#titulo{
     padding: 10px;
+    margin: auto;
     padding-bottom: 100px;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    
+    color: blue;
     }   
 
     #message p 
     {
-        position: absolute;
-        margin-left: auto;
-        margin-right: auto;
-        left: 0;
-        right: 0;
-        top: 150px;
+        margin: auto;
         width: 40vw;
         font-size: 1em;
         background-color: #000;
