--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@ h1{
 
 h1#titulo{
     padding: 10px;
+    color: blueviolet;
     padding-bottom: 100px;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     
