--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ h1{
 
 h1#titulo{
     padding: 10px;
-    color: blueviolet;
+    color: #000;
     padding-bottom: 100px;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     
@@ -163,7 +163,7 @@ h1#titulo{
     margin: auto;
     padding-bottom: 100px;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    color: blue;
+    color: #000;
     }   
 
     #message p 
